--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" type="text/css" href="./css/unsliderdots.css">
   <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
   <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Chonburi" rel="stylesheet">
 </head>
 
@@ -307,120 +309,108 @@
               </div>
             </div>
           </div>
-
-          <div id='slider1'>
-            <ul>
-              <li>
-                <div class='container-fluid board-container'>
-                  <div class='row'>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger'>
-                        <img src='./images/Panjaluck_Website (560x770px)_04-3-1 Board Profile คุณศิริวัฒน์_r11_bo.png' />
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
-                          <br />
-                          <span class="bold board-english-name">SIRIWAT VONGJARUKORN</span>
-                          <br />
-                          <span class="grey board-position">
-                            CHAIRMAN OF THE BOARD
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board2" class='modal-trigger'>
-                        <img src='./images/Panjaluck_Website (560x770px)_04-3-2 Board Profile คุณจีน่า_r11_bo.png'/>
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">จินา โอสถศิลป์</span>
-                          <br />
-                          <span class="bold board-english-name">JINA OSOTHSILP</span>
-                          <br />
-                          <span class="grey board-position">
-                            EXECUTIVE COMMITTEE
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board3" class='modal-trigger'>
-                        <img src='./images/Panjaluck_Website (560x770px)_04-3-3 Board Profile คุณสิน_r11_bo.png' />
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
-                          <br />
-                          <span class="bold board-english-name">Yongyoot Thongkongtoon</span>
-                          <br />
-                          <span class="grey board-position">
-                            EXECUTIVE COMMITTEE,<br />
-                            PRODUCER AND ARTISTIC DIRECTOR
-                          </span>
-                        </div>
-                      </div>
-                    </div>
+          <div class='slick-container-with-arrow'>
+            <i class="flaticon-back slide-arrows left"></i>
+            <div class="slick-container-slider">
+              <div class="board-card">
+                <a href="#modal-link--board1" class='modal-trigger'>
+                  <img src='./images/Panjaluck_Website (560x770px)_04-3-1 Board Profile คุณศิริวัฒน์_r11_bo.png' />
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
+                    <br />
+                    <span class="bold board-english-name">SIRIWAT VONGJARUKORN</span>
+                    <br />
+                    <span class="grey board-position">
+                      CHAIRMAN OF THE BOARD
+                    </span>
                   </div>
                 </div>
-              </li>
-              <li>
-                <div class='container-fluid board-container hackHidden' style='display:none;'>
-                  <div class='row'>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board4" class='modal-trigger'>
-                        <img src='./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png' />
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
-                          <br />
-                          <span class="bold board-english-name">Anant Trisirikasem</span>
-                          <br />
-                          <span class="grey board-position">
-                            Executive Committee, <br />Theatre’s Technology and System Specialist
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board5" class='modal-trigger'>
-                        <img src="./images/Panjaluck_Website (560x770px)_04-3-5 Board Profile คุณธนพล_r11_bo.png"/>
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">ธนพล วิระเทพสุภรณ์</span>
-                          <br />
-                          <span class="bold board-english-name">Tanapol Viratepsuporn</span>
-                          <br />
-                          <span class="grey board-position">
-                            Chief Commercial Officer
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="board-card col-sm-4">
-                      <a href="#modal-link--board6" class='modal-trigger'>
-                        <img src="./images/Panjaluck_Website (560x770px)_04-3-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png"/>
-                      </a>
-                      <div class="board-detail">
-                        <div class='board-detail-name'>
-                          <span class="board-thai-name">กานต์กฤดิชย์ นิ่มสมบุญ</span>
-                          <br />
-                          <span class="bold board-english-name">Karnkridit Nimsombun</span>
-                          <br />
-                          <span class="grey board-position">
-                            Managing Director
-                          </span>
-                        </div>
-                      </div>
-                    </div>
+              </div>
+              <div class="board-card">
+                <a href="#modal-link--board2" class='modal-trigger'>
+                  <img src='./images/Panjaluck_Website (560x770px)_04-3-2 Board Profile คุณจีน่า_r11_bo.png'/>
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">จินา โอสถศิลป์</span>
+                    <br />
+                    <span class="bold board-english-name">JINA OSOTHSILP</span>
+                    <br />
+                    <span class="grey board-position">
+                      EXECUTIVE COMMITTEE
+                    </span>
                   </div>
                 </div>
-              </li>
-            </ul>
-          </div>
+              </div>
+              <div class="board-card">
+                <a href="#modal-link--board3" class='modal-trigger'>
+                  <img src='./images/Panjaluck_Website (560x770px)_04-3-3 Board Profile คุณสิน_r11_bo.png' />
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
+                    <br />
+                    <span class="bold board-english-name">Yongyoot Thongkongtoon</span>
+                    <br />
+                    <span class="grey board-position">
+                      EXECUTIVE COMMITTEE,<br />
+                      PRODUCER AND ARTISTIC DIRECTOR
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="board-card">
+                <a href="#modal-link--board4" class='modal-trigger'>
+                  <img src='./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png' />
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
+                    <br />
+                    <span class="bold board-english-name">Anant Trisirikasem</span>
+                    <br />
+                    <span class="grey board-position">
+                      Executive Committee, <br />Theatre’s Technology and System Specialist
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="board-card">
+                <a href="#modal-link--board5" class='modal-trigger'>
+                  <img src="./images/Panjaluck_Website (560x770px)_04-3-5 Board Profile คุณธนพล_r11_bo.png"/>
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">ธนพล วิระเทพสุภรณ์</span>
+                    <br />
+                    <span class="bold board-english-name">Tanapol Viratepsuporn</span>
+                    <br />
+                    <span class="grey board-position">
+                      Chief Commercial Officer
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="board-card">
+                <a href="#modal-link--board6" class='modal-trigger'>
+                  <img src="./images/Panjaluck_Website (560x770px)_04-3-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png"/>
+                </a>
+                <div class="board-detail">
+                  <div class='board-detail-name'>
+                    <span class="board-thai-name">กานต์กฤดิชย์ นิ่มสมบุญ</span>
+                    <br />
+                    <span class="bold board-english-name">Karnkridit Nimsombun</span>
+                    <br />
+                    <span class="grey board-position">
+                      Managing Director
+                    </span>
+                  </div>
+              </div>
+            </div>
+            </div>
+            <i class="flaticon-next slide-arrows right"></i>
         </div>
       </section>
       <section class='section' id='partner-page'>
@@ -798,6 +788,7 @@
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script src="./js/jquery.bgswitcher.js"></script>
 <script src='./js/index.js'></script>
 
