--- a/public/index.html
+++ b/public/index.html
@@ -313,8 +313,10 @@
         </div>
       </section>
       <section class='section' id='vision-page'>
-        <div class='vision-page-bg1'></div>
-        <div class='vision-page-bg1'></div>
+        <div class='vision-page-bg a'>
+        </div>
+        <div class='vision-page-bg b'>
+        </div>
         <div class='nav-hidden-name'>vision &<br>mission</div>
         <div class='parallax'>
           <h1>VISION & MISSION</h1>
