--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
   <meta name="keywords" content="punjaluck">
   <meta name="description" content="punjaluck website">
   <meta http-equiv="Cache-control" content="public" max-age="8640000">
-  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
   <link rel="stylesheet" type="text/css" href="./css/fonts.css">
   <link rel="stylesheet" type="text/css" href="./css/animation.css">
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <link rel="stylesheet" type="text/css" href="./css/unslider.css">
   <link rel="stylesheet" type="text/css" href="./css/unsliderdots.css">
   <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
-  <link rel="stylesheet" type="text/css" href="./css/normalize.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Chonburi" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/normalize.css">
 </head>
 
 <body aria-hidden='true'>
@@ -270,7 +270,7 @@
         <a href='https://kaanshow-ec4c0.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>KAAN SHOW</span></a>
         <a href='https://d-luck.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>D'LUCK</span></a>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
-        <span class='nav-bar__navigation dropdownSelect' style="width: 60px">
+        <span class='nav-bar__navigation dropdownSelect'>
           TH
           <img src='./images/arrowlang.png' style='width:15px;'/>
           <div class="customDropdown">
@@ -283,7 +283,7 @@
         </div>
         </span>
         <span class='nav-bar__navigation'>
-          <img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5;'/>
+          <img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5; margin-right: 10px;'/>
           <div class='search-value-container'>
             <input type='text' class="search-input"/>
             <div class='search-suggestion-box'>
@@ -683,6 +683,7 @@
         </div>
       </section>
       <footer class='footer'>
+        <div class='footer-wraper'>
         <div class='block sitemap'>
           <h2>SITEMAP</h2>
           <div class='subBlock'>
@@ -741,8 +742,9 @@
           <div class="subBlock" style="width: 40%;">
             <ul>
               <li>CONTACT</li>
-              <li>ADDRESS</li>
-              <li style='font-family:kanit;font-size:14px;'>บริษัท ปัญลักษณ์ พาสุข จำกัด <br>เลขที่ 202 อาคาร เลอ คองคอร์ด <br>ห้อง 1601 ชั้น 16 ถ.รัชดาภิเษก <br>แขวงห้วยขวาง
+              <li style='font-family:kanit;font-size:14px;'>
+                ADDRESS<br>
+                บริษัท ปัญลักษณ์ พาสุข จำกัด <br>เลขที่ 202 อาคาร เลอ คองคอร์ด<br> ห้อง 1601 ชั้น 16 ถ.รัชดาภิเษก <br>แขวงห้วยขวาง
                 กรุงเทพฯ 10310</li>
             </ul>
           </div>
@@ -776,6 +778,7 @@
             <button type="button">SEND MESSAGE</button>
           </div>
         </div>
+      </div>
       </footer>
       <div class="footer-copy-right">
         <span>© 2017 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
